<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/icon_sign_in"
            android:id="@+id/drawer_sign_in"
            android:title="@string/drawer_sign_in"/>
        <item
            android:checked="true"
            android:id="@+id/drawer_explore"
            android:title="@string/explore"
            android:icon="@drawable/icon_explore"/>
        <item
            android:id="@+id/drawer_my_favorites"
            android:icon="@drawable/icon_favorites"
            android:title="@string/my_favorites"/>
        <item
            android:icon="@drawable/icon_bookings"
            android:id="@+id/drawer_my_bookings"
            android:title="@string/my_bookings"/>
        <item
            android:icon="@drawable/icon_directions"
            android:id="@+id/drawer_my_directions"
            android:title="@string/directions"/>
        <item
            android:icon="@drawable/icon_reviews"
            android:id="@+id/drawer_my_reviews"
            android:title="@string/my_reviews"/>
        <item
            android:icon="@drawable/icon_settings"
            android:id="@+id/drawer_settings"
            android:title="@string/settings"/>
        <item
            android:icon="@drawable/icon_contact"
            android:id="@+id/drawer_contact_us"
            android:title="@string/contact_us"/>
        <item
            android:icon="@drawable/icon_help"
            android:id="@+id/drawer_help"
            android:title="@string/faq_articles"/>
        <item
            android:id="@+id/drawer_privacy"
            android:icon="@drawable/icon_privacy"
            android:title="@string/drawer_privacy"/>
        <item
            android:id="@+id/drawer_terms"
            android:icon="@drawable/icon_legal_notices"
            android:title="@string/terms"/>
        <item
            android:id="@+id/drawer_sign_out"
            android:icon="@drawable/icon_sign_out"
            android:title="@string/drawer_sign_out"/>
    </group>

</menu>