<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/btn_action_height"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/txt_email_contact"
            style="@style/ContactUsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_email"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/txt_name_contact"
            android:inputType="textNoSuggestions"
            style="@style/ContactUsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"
            />
        <EditText
            android:id="@+id/txt_subject_contact"
            style="@style/ContactUsTextStyle"
            android:hint="@string/contact_subject"
            android:inputType="textEmailSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txt_message_contact"
            style="@style/ContactUsTextStyle"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/contact_message"
             />
    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:text="@string/send"
        android:layout_alignParentBottom="true"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>