<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="?attr/actionBarSize"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/bottom_margin_gap"
        android:layout_height="wrap_content">
        <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
            <TextView
                android:text="@string/room_types"
                style="@style/FilterSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <FrameLayout
                android:id="@+id/fragment_filter_room_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/property_types"
                style="@style/FilterSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <FrameLayout
                android:id="@+id/fragment_filter_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/price_range"
                style="@style/FilterSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                style="@style/FilterSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_price_min"
                    android:text="@string/filter_minimum"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textAllCaps="true"
                    style="@style/MyTheme.TextBasic.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_price_max"
                    android:text="@string/filter_maximum"
                    android:textAllCaps="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    style="@style/MyTheme.TextBasic.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/lyt_rsb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/property_facilities"
                style="@style/FilterSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <FrameLayout
                android:id="@+id/fragment_filter_amenities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_apply_filters"
        style="@style/GreenButton"
        android:text="@string/apply"
        android:layout_margin="@dimen/standard_space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_action_height"/>
</RelativeLayout>