<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/explore_background"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:layout_marginTop="?attr/actionBarSize"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/view_gap_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_first_name"
                style="@style/MyTheme.TextBasic.Primary.NoSuggestions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_last_name"
                style="@style/MyTheme.TextBasic.Primary.NoSuggestions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                style="@style/MyTheme.TextBasic.Primary.NoSuggestions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txt_nationality"
                android:textColor="@color/colorPrimary"
                style="@style/MyTheme.TextBasic.Primary.NoSuggestions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/nationality"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:text="@string/check_in_time"
                android:textSize="18sp"
                android:textColor="@color/grey_checkable"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"/>

            <Spinner
                android:layout_marginLeft="12dp"
                android:layout_marginStart="@dimen/view_gap_space"
                android:id="@+id/spinner_check_in"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_phone_number"
                android:inputType="phone"
                android:textColor="@color/colorPrimary"
                style="@style/MyTheme.TextBasic.Primary.NoSuggestions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginLeft="@dimen/tiny_view_gap_space"
            android:layout_marginStart="@dimen/tiny_view_gap_space"
            android:layout_marginTop="@dimen/standard_space"
            android:text="@string/mobile_number_suggestion"
            style="@style/MyTheme.TextBasic.Gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        style="@style/GreenButton"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        />

</RelativeLayout>